package comp31.dachopwash.controllers;

import org.springframework.stereotype.Controller;

@Controller
public class WashController {
    
    
}