package comp31.dachopwash.models.entities;

public class Customer {
    
}
