package comp31.dachopwash.models.repositories;

public class InvoiceRepo {
    
}
