package comp31.dachopwash.models.repositories;

import org.springframework.stereotype.Repository;

@Repository
public class WashRepo {
    
}